--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,16 +1,17 @@
 backend:
-  name: test-repo
+    name: github
+    repo: JanderSilv/blog-okta-netlify
 
 media_folder: static/assets
 public_folder: assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
-    create: true
-    fields:
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: datetime }
-      - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
+    - name: blog
+      label: Blog
+      folder: blog
+      create: true
+      fields:
+          - { name: path, label: Path }
+          - { name: date, label: Date, widget: datetime }
+          - { name: title, label: Title }
+          - { name: body, label: Body, widget: markdown }
